DietPi-Software | XU4 Cloudshell LCD Panel: Will automatically be enabled during DietPi-Cloudshell installation.
DietPi-Software | XU4: All 8 cores are now included in configuration stage. Previously we limited configurations to only use 4 CPU cores, due to heat issues with XU4. This will affect software installations such as webservers and should increase their overall performance.
DietPi-Config | LCD Panel addon: Added support for Odroid 3.5 inch LCD touchscreen shield: http://www.hardkernel.com/main/products/prdt_info.php?g_code=G147435282441
DietPi-Cloudshell | Now supports 480x320 resolutions (eg: Odroid 3.5 touchscreen shield).
General | DietPi-RAMdisk DietPi-RAMlog and DietPi-Boot have been converted from sysinit to SystemD.

Bug fixes:
General | XU4 Image: Resolved an issue where a corrupt image was causing power on issues for our users. Many thanks to everyone who helped report, debug and test this issue: https://github.com/Fourdee/DietPi/issues/558
DietPi-Cpu_set | DietPi will no longer attempt to set go_hispeed_load, if it is not supported by kernel (eg: XU4)

-----------------------------------------------------------------------------------------------------------

v134
(16/10/16)

Changes / Improvements / Optimizations:
DietPi-Software | SickRage: Is now available for installation. Automatically downloads and organises your favourite TV shows: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&start=80#p3327
DietPi-Software | LMS / Squeezebox: Now enabled for all devices.
DietPi-Config | Stress Test: Updated, options for a simple CPU burn. Results will also calculate min/max CPU temps. Logs results to file.
General | Avahi Daemon: added to dietpi-process_tool and dietpi-services.
General | NanoPi T2: Bluetooth is now installed by default. This also affects M2, shared image.

Bug fixes: