@@ -4670,17 +4670,17 @@ _EOF_
 			#armv6+
 			if (( $HW_ARCH >= 1 && $HW_ARCH < 10 )); then
 
-				INSTALL_URL_ADDRESS='https://github.com/syncthing/syncthing/releases/download/v0.14.0/syncthing-linux-arm-v0.14.0.tar.gz'
+				INSTALL_URL_ADDRESS='https://github.com/syncthing/syncthing/releases/download/v0.14.9/syncthing-linux-arm-v0.14.9.tar.gz'
 
 			#arm64
 			elif (( $HW_ARCH == 10 )); then
 
-				INSTALL_URL_ADDRESS='https://github.com/syncthing/syncthing/releases/download/v0.14.0/syncthing-linux-arm64-v0.14.0.tar.gz'
+				INSTALL_URL_ADDRESS='https://github.com/syncthing/syncthing/releases/download/v0.14.9/syncthing-linux-arm64-v0.14.9.tar.gz'
 
 			#x86_64
 			elif (( $HW_ARCH == 21 )); then
 
-				INSTALL_URL_ADDRESS='https://github.com/syncthing/syncthing/releases/download/v0.14.0/syncthing-linux-amd64-v0.14.0.tar.gz'
+				INSTALL_URL_ADDRESS='https://github.com/syncthing/syncthing/releases/download/v0.14.9/syncthing-linux-amd64-v0.14.9.tar.gz'
 
 			fi
 
