@@ -70,14 +70,30 @@
 	/DietPi/dietpi/func/dietpi-set_software apt-mirror default
 
 	#////////////////////////////////////
-	#Delete documentation folders
+	#Delete/Cleanup
+
+	# - general folders
+	rm -R /home
+	rm -R /media
+	rm -R /tmp/*
+	rm -R /selinux
+	# 	+ sourcecode (linux-headers etc)
+	rm -R /usr/src/*
+
+	# - root
+	rm -R /root/.cache/*
+	rm -R /root/.local/*
+	rm -R /root/.config/*
+	# 	+ Reapply htop config
+	mkdir -p /root/.config/htop
+	cp /boot/dietpi/conf/htoprc /root/.config/htop/htoprc
+
+	# - documentation folders
 	rm -R /usr/share/man
 	rm -R /usr/share/doc
 	rm -R /usr/share/doc-base
 	rm -R /usr/share/calendar
 
-	# + sourcecode (linux-headers etc)
-	rm -R /usr/src/*
 
 	#////////////////////////////////////
 	#Disable/Remove Swapfile (saves 100mb in final image)
