@@ -9,6 +9,7 @@ DietPi-Software | PiVPN installation option added: PiVPN is a set of installatio
 DietPi-Software | NextCloud: Installation updated to 10.0.1, many thanks to @Bridouz: https://github.com/Fourdee/DietPi/pull/565
 DietPi-Software | XU4 Cloudshell LCD Panel: Will automatically be enabled during DietPi-Cloudshell installation.
 DietPi-Software | XU4: All 8 cores are now included in configuration stage. Previously we limited configurations to only use 4 CPU cores, due to heat issues with XU4. This will affect software installations such as webservers and should increase their overall performance.
+DietPi-Software | Syncthing installation updated to 0.14.9.
 DietPi-Config | LCD Panel addon: Added support for Odroid 3.5 inch LCD touchscreen shield: http://www.hardkernel.com/main/products/prdt_info.php?g_code=G147435282441
 DietPi-Cloudshell | Now supports 480x320 resolutions (eg: Odroid 3.5 touchscreen shield).
 General | DietPi-RAMdisk DietPi-RAMlog and DietPi-Boot have been converted from sysinit to SystemD.
